@@ -9,43 +9,7 @@
 
 struct MemoryLayout;
 
-class Symbol;
-
-class SymbolTable
-{
-public:
-	SymbolTable();
-	~SymbolTable();
-
-	void add( Symbol *symbol );
-	void removeAt( int index );
-
-	Symbol *findFirstAddressSymbol( int addr, MemoryLayout *ml = 0 );
-	Symbol *getCurrentAddressSymbol();
-	Symbol *findNextAddressSymbol( MemoryLayout *ml = 0 );
-
-	void symbolTypeChanged( Symbol *symbol );
-	void symbolValueChanged( Symbol *symbol );
-
-	int symbolFilesSize() const;
-	const QString& symbolFile( int index ) const;
-
-	bool readTNIASM0File( const QString& filename );
-	bool readASMSXFile( const QString& filename );
-	void reloadFiles();
-	void unloadFile( const QString& file, bool keepSymbols = false );
-
-private:
-	QList<Symbol*> symbols;
-	QMultiMap<int, Symbol*> addressSymbols;
-	QMultiHash<int, Symbol*> valueSymbols;
-	QMultiMap<int, Symbol*>::iterator currentAddress;
-	QList<QString*> symbolFiles;
-
-	void mapSymbol( Symbol *symbol );
-	void unmapSymbol( Symbol *symbol );
-};
-
+class SymbolTable;
 
 class Symbol
 {
@@ -59,7 +23,10 @@ public:
 	enum Register { REG_A = 1, REG_B = 2, REG_C = 4, REG_D = 8, REG_E = 16,
 	                REG_H = 32, REG_L = 64, REG_BC = 128, REG_DE = 256,
 	                REG_HL = 512, REG_IX = 1024, REG_IY = 2048, REG_IXL = 4096,
-	                REG_IXH = 8192, REG_IYL = 16384, REG_IYH = 32768 };
+	                REG_IXH = 8192, REG_IYL = 16384, REG_IYH = 32768,
+	                REG_ALL8 = 1+2+4+8+16+32+64+4096+8192+16384+32768,
+	                REG_ALL16 = 128+256+512+1024+2048,
+	                REG_ALL = 65535 };
 	
 	const QString& text() const;
 	void setText( const QString& str );
@@ -89,6 +56,45 @@ private:
 	QString *symSource;
 	SymbolStatus symStatus;
 	SymbolType symType;
+};
+
+
+class SymbolTable
+{
+public:
+	SymbolTable();
+	~SymbolTable();
+
+	void add( Symbol *symbol );
+	void removeAt( int index );
+
+	/* Symbol access functions */
+	Symbol *findFirstAddressSymbol( int addr, MemoryLayout *ml = 0 );
+	Symbol *getCurrentAddressSymbol();
+	Symbol *findNextAddressSymbol( MemoryLayout *ml = 0 );
+	Symbol *getValueSymbol( int val, Symbol::Register reg, MemoryLayout *ml = 0 );
+	Symbol *getAddressSymbol( int val, MemoryLayout *ml = 0 );
+
+	void symbolTypeChanged( Symbol *symbol );
+	void symbolValueChanged( Symbol *symbol );
+
+	int symbolFilesSize() const;
+	const QString& symbolFile( int index ) const;
+
+	bool readTNIASM0File( const QString& filename );
+	bool readASMSXFile( const QString& filename );
+	void reloadFiles();
+	void unloadFile( const QString& file, bool keepSymbols = false );
+
+private:
+	QList<Symbol*> symbols;
+	QMultiMap<int, Symbol*> addressSymbols;
+	QMultiHash<int, Symbol*> valueSymbols;
+	QMultiMap<int, Symbol*>::iterator currentAddress;
+	QList<QString*> symbolFiles;
+
+	void mapSymbol( Symbol *symbol );
+	void unmapSymbol( Symbol *symbol );
 };
 
 
